Fix text align

--- a/amedpal/index/static/CSS/index.css
+++ b/amedpal/index/static/CSS/index.css
@@ -98,7 +98,7 @@ h1 {
 .paragraph {
     margin-bottom: 1.5em;
     color: black;
-    text-align: justify;
+    text-align: left;
 }
 
 .table-scroll {
